fix search-box cross-browser alignment problems

--- a/static/css/default/common.css
+++ b/static/css/default/common.css
@@ -98,6 +98,7 @@ header .navbar-search-input {
 	display: inline-block;
 	width: 100%;
 	padding: 22.5px 0;
+	float: right;
 }
 
 header .navbar-search-input input {
@@ -108,9 +109,11 @@ header .navbar-search-input input {
 
 header .navbar-search-icon {
 	position: relative;
-	top: -50px;
+	top: -47px;
 	float: right;
 	margin-right: 10px;
+	line-height: 0;
+	display: inline-block;
 }
 
 header .navbar-search-icon a {
@@ -155,7 +158,7 @@ header .navbar-mobile-search-form-wrap {
 header .navbar-mobile-search-close {
 	padding: 27px 0;
 	color: #adadad;
-	font-size: 160%;
+	font-size: 140%;
 	float: left;
 	height: 80px;
 }
